@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - remove accidental early inclusion of long double and complex types
+    in type map.
 
 0.22      2015-02-12 07:47:32 -0500
   - Variable length arrays
